# infra-automation-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: terraform-deploy.yml
Example Use Cases/: SOC2 Access Review
docs/audit/: User_Deactivation_Alex_Garcia_2026-02-11.md
docs/onboarding/: bruce-lee-manual-steps.md
src/infra_automation_mcp/: __init__.py  aws_client.py  github_client.py  okta_client.py  server.py  slack_client.py  terraform_client.py
terraform/aws/ec2/: emmy_bentley_development_box.tf
terraform/aws/iam/: emmy_bentley.tf
terraform/changes/: create-free-tier-ec2-instance--202601301213.tf  create-free-tier-ec2-instance--202601301611.tf  create-free-tier-ec2-instance--202601301632.tf  created-free-tier-ec2-instance-202601301122.tf
terraform/ec2/: alex-dev-box.tf  bruce-lee-box.tf  carlos-santana-development-box.tf  dev-workstation-alex.tf  free-tier-instance-fixed.tf  free-tier-instance.tf  lilly-lindsey-development-box.tf  lucy-lee-development-box.tf  lucy-spacy-development-box.tf  milan-miles-development-box.tf
terraform/environments/dev/: main.tf
terraform/iam/: alex-chen-user.tf  alex-chen.tf  alex-kim-iam.tf  bruce-lee-iam.tf  carlos-santana-iam.tf  it-engineering-group.tf  lilly-lindsey-iam.tf  lucy-levi.tf  lucy-spacy-iam.tf  milan-miles-iam.tf  security-engineers.tf
terraform/okta/: carlos-santana-okta.tf  it-engineering-group.tf  platform-developers.tf  security-engineering-group.tf  security-engineers-group.tf
terraform/okta/groups/: it_system_engineering.tf
terraform/users/: caroline-bryant.tf
(+3 files in other folders)
